force-app/main/default/objects/Billing_Schedule__c/Billing_Schedule__c.object-meta.xml
<CustomObject>
    <label>Billing Schedule</label>
    <nameField>
        <displayFormat>BS-{0000000000}</displayFormat>
        <label>Billing Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>