force-app/main/default/objects/Billing_Schedule__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Schedule</relationshipLabel>
    <relationshipName>Billing_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>