force-app/main/default/objects/Billing_Schedule__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Schedule</relationshipLabel>
    <relationshipName>Billing_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>