force-app/main/default/objects/Billing_Schedule__c/fields/Employee_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Employee_Bill_Rate__c</fullName>
    <label>Employee Bill Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>