force-app/main/default/objects/Billing_Schedule__c/fields/Month_Number__c.field-meta.xml
<CustomField>
    <fullName>Month_Number__c</fullName>
    <formula>MONTH(Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>