force-app/main/default/objects/Billing_Schedule__c/fields/Project_Billing__c.field-meta.xml
<CustomField>
    <fullName>Project_Billing__c</fullName>
    <formula>TEXT( Project_Contract__r.PITS_Project_Billing__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Billing</label>
    <type>Text</type>
</CustomField>