force-app/main/default/objects/Billing_Schedule__c/fields/Project_Contract__c.field-meta.xml
<CustomField>
    <fullName>Project_Contract__c</fullName>
    <label>Project/Contract</label>
    <referenceTo>Project_Contract__c</referenceTo>
    <relationshipLabel>Billing Schedules</relationshipLabel>
    <relationshipName>Billing_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>