force-app/main/default/objects/Billing_Schedule__c/recordTypes/Hourly.recordType-meta.xml
<RecordType>
    <fullName>Hourly</fullName>
    <active>true</active>
    <label>Hourly</label>
</RecordType>