force-app/main/default/objects/Billing_Schedule__c/recordTypes/Monthly_Fixed_Priced.recordType-meta.xml
<RecordType>
    <fullName>Monthly_Fixed_Priced</fullName>
    <active>true</active>
    <label>Monthly Fixed Priced</label>
</RecordType>