force-app/main/default/objects/Billing_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Employee_Bill_Rate__c</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Month__c</columns>
    <columns>Months__c</columns>
    <columns>Hours__c</columns>
    <columns>Quantity__c</columns>
    <columns>Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Project_Contract__c</columns>
    <columns>Project_Billing__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>